[package]
name = "webrtc-capture-proof-of-concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
openh264 = "0.2.12"
webrtc = "0.4.0"
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
clap = "3.0.8"
hyper = { version = "0.14.16", features = ["full"] }
signal = {path = "examples/signal" }
tokio-util = "0.6.9"
anyhow = "1.0.52"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
